tests/ui/fail/duplicate-param.stderr
error: argument `yield` specified multiple times
 --> tests/ui/fail/duplicate-param.rs:3:26
  |
3 | #[generator(yield = u32, yield = u64)]
  |                          ^^^^^
